# PCKPP

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  headers.py
assets/fonts/: m6x11plus-license.txt
include/pckpp/: Util.h
include/pckpp/Application/: Application.h
include/pckpp/Backends/: ImGuiOpenGLRendererBackend.hpp  ImGuiSDLPlatformBackend.hpp
include/pckpp/Binary/: Binary.h  BinaryReader.h
include/pckpp/Graphics/: GraphicsBase.h
include/pckpp/PCK/: PCKAssetFile.h  PCKFile.h
include/pckpp/Program/: ProgramInstance.h
include/pckpp/UI/: Preview.h  SkinBox.h  UIBase.h  UIImGui.h
include/pckpp/UI/Menu/: MenuFunctions.h
include/pckpp/UI/Tree/: TreeFunctions.h
src/: Application.h  Program.cpp  Program.h  main.cpp
src/Application/: Application.cpp  Application.h
src/Binary/: Binary.cpp  Binary.h  BinaryReader.cpp  BinaryReader.h  BinaryWriter.cpp  BinaryWriter.h
src/Graphics/: Graphics.cpp  Graphics.h  GraphicsBase.h  GraphicsOpenGL.cpp  GraphicsOpenGL.h
src/IO/: BinaryReader.cpp  BinaryReader.h  BinaryWriter.cpp  BinaryWriter.h  IO.cpp  IO.h
src/Math/: Vec2Operators.h
src/PCK/: PCKAssetFile.cpp  PCKAssetFile.h  PCKFile.cpp  PCKFile.h
src/Platform/: PlatformBase.h  PlatformSDL.cpp  PlatformSDL.h
src/Program/: Program.cpp  ProgramInstance.cpp
src/UI/: Preview.h  UI.cpp  UI.h  UIBase.h  UIImGui.cpp  UIImGui.h
src/UI/Menu/: MenuFunctions.cpp  MenuFunctions.h
src/UI/Preview/: PreviewSkin.cpp
src/UI/Tree/: TreeFunctions.cpp  TreeFunctions.h  TreeNode.h
src/Util/: IO.cpp  Util.cpp
src/pckpp/: main.cpp
src/pckpp/Application/: Application.cpp  Application.h
src/pckpp/Backends/: ImGuiOpenGLRendererBackend.hpp  ImGuiSDLPlatformBackend.hpp
src/pckpp/Binary/: BinaryReader.cpp  BinaryReader.h  BinaryWriter.cpp
src/pckpp/Graphics/: GraphicsBase.h  GraphicsOpenGL.cpp  GraphicsOpenGL.h
src/pckpp/PCK/: PCKAssetFile.cpp  PCKAssetFile.h  PCKFile.cpp  PCKFile.h
src/pckpp/Platform/: PlatformBase.h  PlatformSDL.cpp
src/pckpp/Program/: Program.cpp  ProgramInstance.cpp  ProgramInstance.h
src/pckpp/UI/: UIBase.h  UIImGui.cpp  UIImGui.h
src/pckpp/UI/Menu/: MenuFunctions.cpp
src/pckpp/UI/Tree/: TreeFunctions.cpp  TreeFunctions.h  TreeNode.h
src/pckpp/Util/: IO.h  Util.cpp  Util.h
